objects/SDOC__SDJob__c.object
<CustomObject>
    <description>S-Doc: Allows auto-generate and email of documents via batch, list view, import, workflow or lightning process builder.</description>
    <fields>
        <fullName>SDOC__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>S-Docs Jobs</relationshipLabel>
        <relationshipName>S_Docs_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Aid__c</fullName>
        <description>(Optional) A comma delimited list of SFDC attachment IDs (from Notes and Attachments) that will be included in any outbound email.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>(Optional) A comma delimited list of SFDC attachment IDs (from Notes and Attachments) that will be included in any outbound email.</inlineHelpText>
        <label>Incl. Attachments with Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Apex_Job_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Apex Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Attempts__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attempts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Batch_Group_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Batch Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Batch_Number__c</fullName>
        <label>Batch Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDOC__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>S_Docs_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Data_Uneditable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Uneditable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Did__c</fullName>
        <description>(Optional) A comma delimited list of SFDC Document IDs (from Documents Tab) that will be included in any outbound email.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>(Optional) A comma delimited list of SFDC Document IDs (from Documents Tab) that will be included in any outbound email.</inlineHelpText>
        <label>Incl. Documents with Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Doclist__c</fullName>
        <description>Provide a comma delimited list of S-Docs Template IDs or Names that will be created for this Job.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Provide a comma delimited list of S-Docs Template IDs or Names that will be created for this Job.</inlineHelpText>
        <label>Doclist</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__EmailURL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EmailURL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_From__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_Params__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Params</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Fid__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Incl. Files with Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Finish_Pending_Docs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finish Pending Docs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Include_All_Related_Files__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the S-Doc Job will automatically attach all files related to the base record to the email.</inlineHelpText>
        <label>Include All Related Files</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__JobURL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JobURL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Job_Chained_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Chained From</label>
        <referenceTo>SDOC__SDJob__c</referenceTo>
        <relationshipLabel>Jobs Chained</relationshipLabel>
        <relationshipName>Jobs_Chained</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>S-Docs Jobs</relationshipLabel>
        <relationshipName>S_Docs_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__LineItemDataXML__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LineItemDataXML</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__NetworkId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NetworkId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Num_Partitions__c</fullName>
        <label>Num Partitions</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDOC__ObjApiName__c</fullName>
        <description>API name should end with &quot;__c&quot; if a custom object. Ensure the Object ID provided matches the object Type in this field.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>API name should end with &quot;__c&quot; if a custom object. Ensure the Object ID provided matches the object Type in this field.</inlineHelpText>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__ObjSortValFieldsForSDoc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ObjSortValFieldsForSDoc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__ObjSortValNum__c</fullName>
        <label>ObjSortValNum</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDOC__ObjSortVal__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ObjSortVal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Oid__c</fullName>
        <description>15 or 18 Character SFDC ID of record</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>15 or 18 Character SFDC ID of record</inlineHelpText>
        <label>Object ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Partition_Number__c</fullName>
        <label>Partition Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDOC__Position_In_Batch__c</fullName>
        <label>Position In Batch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDOC__Process_Job_Splitters_Concurrently__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process Job Splitters Concurrently</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__RecordData2XML__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RecordData2XML</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__RecordDataXML__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RecordDataXML</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__RunAs__c</fullName>
        <defaultValue>$User.Username</defaultValue>
        <description>User who will generate/email the generated docs. Value should be the user&apos;s unique salesforce login name (in the form of an email address) - NOT the SFDC ID or user&apos;s email. Remote App must be configured per the set-up documentation to use this feature.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>User who will generate/email the generated docs. Value should be the user&apos;s unique salesforce login name (in the form of an email address) - NOT the SFDC ID or user&apos;s email. Remote App must be configured per the set-up documentation to use this feature.</inlineHelpText>
        <label>Run As User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__SDCreate3_Parameters__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SDCreate3 Parameters</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__SDoc1_View__c</fullName>
        <formula>IF (NOT(ISBLANK(SDOC__SDoc1__c)),
SDOC__SDoc1__r.SDOC__View_Link__c, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SDoc1 View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__SDoc1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SDoc1</label>
        <referenceTo>SDOC__SDoc__c</referenceTo>
        <relationshipName>SDJobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__SDoc2_View__c</fullName>
        <formula>IF (NOT(ISBLANK(SDOC__SDoc2__c)),
SDOC__SDoc2__r.SDOC__View_Link__c, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SDoc2 View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__SDoc2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SDoc2</label>
        <referenceTo>SDOC__SDoc__c</referenceTo>
        <relationshipName>SDJobs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__SSign_Envelope_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>S-Sign Envelope ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__SSign_First_Signer_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SSign First Signer URL</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__SSign_Language__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SSign Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__SendEmail__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>&quot;0&quot; indicates no email will be sent. To auto-email the generated doc(s), set to &quot;1&quot;. 
&quot;Doclist&quot; must contain a Template ID with fomat set to &quot;HTML&quot; (this will become the email body) and must also set the &quot;to&quot; and &quot;subject&quot; fields for the outbound email.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>&quot;0&quot; indicates no email will be sent. To auto-email the generated doc(s), set to &quot;1&quot;. 
&quot;Doclist&quot; must contain a Template ID with fomat set to &quot;HTML&quot; (this will become the email body) and must also set the &quot;to&quot; and &quot;subject&quot; fields for the outbound email.</inlineHelpText>
        <label>Send Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Start__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Start Job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Status_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Status_Link__c</fullName>
        <formula>IF (CONTAINS(SDOC__Status__c, &apos;Error&apos;),
  HYPERLINK(&apos;/&apos; + Id, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &apos;&apos;) + SDOC__Status__c, &apos;_blank&apos;),
  IF (ISNUMBER(SDOC__Status__c),
    IMAGE(&apos;/img/samples/color_green.gif&apos;, &apos;&apos;, 7, value(SDOC__Status__c)/2) &amp; IMAGE(&apos;/img/s.gif&apos;, &apos;&apos;, 7, (50 - value(SDOC__Status__c))/2) &amp; &apos; &apos; &amp; SDOC__Status__c &amp; &apos;%&apos;,
    IF (SDOC__Status__c = &apos;Selected&apos;,
      IMAGE(&apos;/img/s.gif&apos;, &apos;&apos;, 7, 50) &amp; &apos; &apos; &amp; &apos;0%&apos;,
      IF (SDOC__Status__c = &apos;Completed&apos;,
        IMAGE(&apos;/img/samples/color_green.gif&apos;, &apos;&apos;, 7, 50) &amp; &apos; &apos;&amp; &apos;100%&apos; &amp; SDOC__SDoc1_View__c &amp; &apos; &apos; &amp; SDOC__SDoc2_View__c,
        SDOC__Status__c
      )
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Status__c</fullName>
        <defaultValue>&quot;Selected&quot;</defaultValue>
        <description>Completion percentage (0-100)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Indicates Percent Completed. Default of &quot;0&quot; will start the job upon save. 
Other Values:
&quot;Selected&quot; : Job is ready but not started. 
&quot;Completed&quot;: Document created
&quot;Error&quot;: See Status details for more info</inlineHelpText>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__TaskID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Task ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Task_Subject__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Task Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Uses_File_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uses File Master</label>
        <type>Checkbox</type>
    </fields>
    <label>SDoc Job</label>
    <listViews>
        <fullName>SDOC__All</fullName>
        <columns>NAME</columns>
        <columns>SDOC__Type__c</columns>
        <columns>SDOC__ObjApiName__c</columns>
        <columns>SDOC__Status__c</columns>
        <columns>SDOC__Apex_Job_ID__c</columns>
        <columns>SDOC__Oid__c</columns>
        <columns>SDOC__RunAs__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>SDJob Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S-Docs Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>